apps/media/calibre/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calibre
spec:
  selector:
    app: calibre
  ports:
    - port: 8080
      protocol: TCP
      targetPort: vnc
      name: vnc
    - port: 8081
      protocol: TCP
      targetPort: calibre
      name: calibre
  sessionAffinity: None
  type: ClusterIP
